--- a/changelog
+++ b/changelog
@@ -16,3 +16,7 @@ Back End
 Front End
 -Started working on the Sets display
 -Started working on the filtering UI
+
+1.1
+Archived everything from 1.03's backend updates
+Went with a different front end approach and removed the need for a computational solution
